--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.0.15
   just_audio: ^0.9.30
   audio_video_progress_bar: ^0.11.0
+  permission_handler: ^10.2.0
+  path_provider: ^2.0.11
 
 
 dev_dependencies:
