--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   audio_video_progress_bar: ^0.11.0
   permission_handler: ^10.2.0
   path_provider: ^2.0.11
+  font_awesome_flutter: ^10.3.0
 
 
 dev_dependencies:
