--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.0.11
   font_awesome_flutter: ^10.3.0
+  on_audio_query: ^2.5.3
+  just_audio_background: ^0.0.1-beta.7
+
+
 
 
 dev_dependencies:
